src/Domain/Compiler/Tests/Expression/BinaryExpression/BoundsChecking/__Baselines__/Addition_Underflow-StashIr.error
error: Integral expression of type 's32 -2147483649' subceeds minimum value of type 's32'.
--> main.hs:9:16
  | 
9 |         return x + y;
  |                ^^^^^
